<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pl.pwr.wybory.MenuActivity"
    android:orientation="vertical">

    <Button
        android:text="@string/browse_elections"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/show_elections_button"
        tools:text="@string/browse_elections"
        android:layout_below="@+id/questionary_button"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/cardview_light_background"
        android:layout_weight="1" />

    <Button
        android:text="@string/fill_questionary"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/questionary_button"
        tools:text="@string/fill_questionary"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/cardview_light_background"
        android:layout_weight="1" />

    <Button
        android:text="@string/show_profile"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/show_profile_button"
        android:layout_below="@+id/show_elections_button"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/cardview_light_background"
        android:layout_weight="1" />

</LinearLayout>
