<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pl.pwr.wybory.LoginActivity">

    <ImageView
        android:layout_height="200dp"
        app:srcCompat="@drawable/logo"
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/login_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/login"
        android:inputType="textPersonName"
        android:layout_below="@+id/imageView"
        android:layout_alignStart="@+id/password_editText"
        android:layout_marginTop="32dp" />

    <EditText
        android:id="@+id/password_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:layout_below="@+id/login_editText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:layout_below="@+id/password_editText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/colorAccent"
        android:textColor="@android:color/background_light" />
</RelativeLayout>
