<resources>
    <string name="app_name">Wybory</string>
    <string name="login">Login</string>
    <string name="password">Hasło</string>
    <string name="log_in">Zaloguj</string>
    <string name="fill_questionary">Wypełnij ankietę</string>
    <string name="browse_elections">Przeglądaj wybory</string>
    <string name="add_elections">Dodaj wybory</string>
    <string name="add_candidate">Dodaj kandydata</string>
    <string name="show_profile">Pokaż profil</string>
    <string name="candidate_label">Kandydat na stanowisko:</string>
    <string name="employment_date_label">Zatrudniony:</string>
    <string name="program_label">Program wyborczy</string>
    <string name="faculty_label">Wydział</string>
    <string name="edit">Edytuj</string>
    <string name="vote">Głosuj</string>
    <string name="delete">Usuń</string>
    <string name="employed">Zatrudniony:</string>
    <string name="candidat_on_position">Kandydat na stanowisko</string>
    <string name="election_program">Program wyborczy</string>
</resources>
